--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,78 @@
     <body class="text-gray-600 font-body">
         <div class="grid md:grid-cols-3">
             <!-- content wrapper -->
-            <div class="md:col-span-1">
-                <nav>
+            <div class="md:col-span-1 md:flex md:justify-end">
+                <nav class="text-right">
                     <div>
                         <h1 class="font-bold uppercase p-4">
-                            <a href="/">Food Ninja</a>
+                            <a class="hover:text-gray-70" href="/"
+                                >Food Ninja</a
+                            >
                         </h1>
                     </div>
-                    <ul>
-                        <li class="text-gray-700 font-bold">
-                            <a href="#"><span>Home</span></a>
+                    <ul class="text-sm mt-6">
+                        <li class="text-gray-700 font-bold mb-2">
+                            <a
+                                href="#"
+                                class="px-4 flex justify-end border-r-4 border-primary"
+                                ><span>Home</span
+                                ><svg
+                                    class="w-5 ml-2"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                                    /></svg
+                            ></a>
                         </li>
-                        <li>
-                            <a href="#"><span>About</span></a>
+                        <li class="mb-2">
+                            <a
+                                href="#"
+                                class="px-4 flex justify-end border-r-4 border-white"
+                                ><span>About</span
+                                ><svg
+                                    class="w-5 ml-2"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                                    /></svg
+                            ></a>
                         </li>
-                        <li>
-                            <a href="#"><span>Contact</span></a>
+                        <li class="mb-2">
+                            <a
+                                href="#"
+                                class="px-4 flex justify-end border-r-4 border-white"
+                                ><span>Contact</span
+                                ><svg
+                                    class="w-5 ml-2"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                                    /></svg
+                            ></a>
                         </li>
                     </ul>
                 </nav>
@@ -34,11 +90,11 @@
             <main class="md:col-span-2 px-16 py-6 bg-gray-100">
                 <div class="flex justify-center md:justify-end">
                     <a
-                        class="text-primary btn border-primary md:border-2"
+                        class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white"
                         href="#"
                         >Log in</a
                     ><a
-                        class="ml-2 text-primary btn border-primary md:border-2"
+                        class="ml-2 text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white"
                         href="#"
                         >Sign up</a
                     >
@@ -59,7 +115,7 @@
                         class="mt-8 grid tablet:grid-cols-2 laptop:grid-cols-3 gap-10"
                     >
                         <!-- cards -->
-                        <div class="card">
+                        <div class="card hover:shadow-lg">
                             <img
                                 class="w-full h-32 sm:h-48 object-cover"
                                 src="img/stew.jpeg"
@@ -74,16 +130,46 @@
                                 >
                             </div>
                             <div class="badge">
+                                <svg
+                                    class="w-5 inline-block"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                                    />
+                                </svg>
                                 <span>15 mins</span>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card hover:shadow-lg">
                             <img
                                 class="w-full h-32 sm:h-48 object-cover"
                                 src="img/curry.jpeg"
                                 alt=""
                             />
                             <div class="m-4">
+                                <svg
+                                    class="w-5 inline-block"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                                    />
+                                </svg>
                                 <span class="font-bold"
                                     >5 Bean Chilli Stew</span
                                 >
@@ -92,10 +178,25 @@
                                 >
                             </div>
                             <div class="badge">
+                                <svg
+                                    class="w-5 inline-block"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                                    />
+                                </svg>
                                 <span>15 mins</span>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card hover:shadow-lg">
                             <img
                                 class="w-full h-32 sm:h-48 object-cover"
                                 src="img/noodles.jpeg"
@@ -110,6 +211,21 @@
                                 >
                             </div>
                             <div class="badge">
+                                <svg
+                                    class="w-5 inline-block"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-6 w-6"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                                    />
+                                </svg>
                                 <span>15 mins</span>
                             </div>
                         </div>
@@ -120,8 +236,10 @@
                         <!-- cards -->
                     </div>
 
-                    <div>
-                        <div class="btn bg-secondary-100 text-secondary-200">
+                    <div class="flex justify-center">
+                        <div
+                            class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner"
+                        >
                             Load more
                         </div>
                     </div>
