--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
+        <script src="index.js" defer></script>
         <title>Document</title>
     </head>
     <body class="text-gray-600 font-body">
@@ -12,14 +13,31 @@
             <!-- content wrapper -->
             <div class="md:col-span-1 md:flex md:justify-end">
                 <nav class="text-right">
-                    <div>
+                    <div class="flex justify-between items-center">
                         <h1 class="font-bold uppercase p-4">
                             <a class="hover:text-gray-70" href="/"
                                 >Food Ninja</a
                             >
                         </h1>
+                        <div class="px-4 cursor-pointer md:hidden" id="burger">
+                            <svg
+                                class="w-6"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="h-6 w-6"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke="currentColor"
+                                stroke-width="2"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="M4 6h16M4 12h16M4 18h16"
+                                />
+                            </svg>
+                        </div>
                     </div>
-                    <ul class="text-sm mt-6">
+                    <ul class="text-sm mt-6 hidden md:block" id="menu">
                         <li class="text-gray-700 font-bold mb-2">
                             <a
                                 href="#"
