--- a/public/index.html
+++ b/public/index.html
@@ -108,11 +108,11 @@
             <main class="md:col-span-2 px-16 py-6 bg-gray-100">
                 <div class="flex justify-center md:justify-end">
                     <a
-                        class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white"
+                        class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
                         href="#"
                         >Log in</a
                     ><a
-                        class="ml-2 text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white"
+                        class="ml-2 text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
                         href="#"
                         >Sign up</a
                     >
@@ -256,7 +256,7 @@
 
                     <div class="flex justify-center">
                         <div
-                            class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner"
+                            class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
                         >
                             Load more
                         </div>
